<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.AddNotesActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_title_note"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:background="@drawable/back_edit_text"
        android:padding="12dp"
        android:textSize="24sp"
        android:hint="@string/title"
        android:textColorHint="@color/colorTextTertiary"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_detail_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:gravity="start"
        android:background="@drawable/back_edit_text"
        android:hint="@string/detail"
        android:padding="12dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextTertiary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_title_note" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorTextSecondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="2050/05/09 | 12:56" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:textColor="@color/colorError"
            android:textSize="22sp"
            android:backgroundTint="@color/colorSurfaceVariant" />

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:backgroundTint="@color/colorSurfaceVariant" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
